kubernetes/deploy/proxies/internal/truenas/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: truenas
subsets:
  - addresses:
      - ip: 192.168.100.4
    ports:
      - port: 80
        name: http
