kubernetes/deploy/proxies/internal/truenas/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: truenas
spec:
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
