kubernetes/deploy/proxies/internal/truenas/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: truenas
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`vault.vandeneede.org`)
    services:
    - name: truenas
      port: 80
